Corrected some spacing on front page.

--- a/css/devluxe.css
+++ b/css/devluxe.css
@@ -62,7 +62,7 @@ width:1050px
 }
 
 #aboveslider {
-	margin-top: -35px;
+	margin-top: -40px;
 }
 
 
